--- a/doc/source/opt-lightweight-discrete-ghost-layer.ipynb
+++ b/doc/source/opt-lightweight-discrete-ghost-layer.ipynb
@@ -5,15 +5,17 @@
    "id": "palestinian-motor",
    "metadata": {},
    "source": [
-    "Tutorial: discrete-based lightweight optimization using the ghost layer method\n",
+    "Tutorial: discrete-based lightweight optimisation using the ghost layer method\n",
     "==\n",
-    "Date: 31 of August 2024\n",
+    "Date: 31 August 2024\n",
+    "\n",
+    "Last update: 4 February 2026\n",
     "\n",
     "Author: Saullo G. P. Castro\n",
     "\n",
     "Cite this tutorial as:\n",
     "\n",
-    "Castro, SGP. Methods for analysis and design of composites (Version 0.7.1) [Computer software]. 2024. https://doi.org/10.5281/zenodo.2871782\n"
+    "Castro, SGP. Methods for analysis and design of composites (Version 0.8.4) [Computer software]. 2024. https://doi.org/10.5281/zenodo.2871782\n"
    ]
   },
   {
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "id": "separate-resort",
    "metadata": {},
    "outputs": [
@@ -35,16 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mDEPRECATION: Loading egg at /Users/saullogiovanip/miniconda3/lib/python3.12/site-packages/composites-0.7.0-py3.12-macosx-11.1-arm64.egg is deprecated. pip 24.3 will enforce this behaviour change. A possible replacement is to use pip for package installation.. Discussion can be found at https://github.com/pypa/pip/issues/12330\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mDEPRECATION: Loading egg at /Users/saullogiovanip/miniconda3/lib/python3.12/site-packages/fea-0.0.1-py3.12.egg is deprecated. pip 24.3 will enforce this behaviour change. A possible replacement is to use pip for package installation.. Discussion can be found at https://github.com/pypa/pip/issues/12330\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mDEPRECATION: Loading egg at /Users/saullogiovanip/miniconda3/lib/python3.12/site-packages/docopt-0.6.2-py3.12.egg is deprecated. pip 24.3 will enforce this behaviour change. A possible replacement is to use pip for package installation.. Discussion can be found at https://github.com/pypa/pip/issues/12330\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mDEPRECATION: Loading egg at /Users/saullogiovanip/miniconda3/lib/python3.12/site-packages/coverage-7.5.4-py3.12-macosx-11.1-arm64.egg is deprecated. pip 24.3 will enforce this behaviour change. A possible replacement is to use pip for package installation.. Discussion can be found at https://github.com/pypa/pip/issues/12330\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mDEPRECATION: Loading egg at /Users/saullogiovanip/miniconda3/lib/python3.12/site-packages/coverage-7.6.0-py3.12-macosx-11.1-arm64.egg is deprecated. pip 24.3 will enforce this behaviour change. A possible replacement is to use pip for package installation.. Discussion can be found at https://github.com/pypa/pip/issues/12330\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mDEPRECATION: Loading egg at /Users/saullogiovanip/miniconda3/lib/python3.12/site-packages/setuptools_git_version-1.0.3-py3.12.egg is deprecated. pip 24.3 will enforce this behaviour change. A possible replacement is to use pip for package installation.. Discussion can be found at https://github.com/pypa/pip/issues/12330\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mDEPRECATION: Loading egg at /Users/saullogiovanip/miniconda3/lib/python3.12/site-packages/structsolve-0.2.2-py3.12.egg is deprecated. pip 24.3 will enforce this behaviour change. A possible replacement is to use pip for package installation.. Discussion can be found at https://github.com/pypa/pip/issues/12330\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mDEPRECATION: Loading egg at /Users/saullogiovanip/miniconda3/lib/python3.12/site-packages/coveralls-4.0.1-py3.12.egg is deprecated. pip 24.3 will enforce this behaviour change. A possible replacement is to use pip for package installation.. Discussion can be found at https://github.com/pypa/pip/issues/12330\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mDEPRECATION: Loading egg at /Users/saullogiovanip/miniconda3/lib/python3.12/site-packages/pyfe3d-0.5.0-py3.12-macosx-11.1-arm64.egg is deprecated. pip 24.3 will enforce this behaviour change. A possible replacement is to use pip for package installation.. Discussion can be found at https://github.com/pypa/pip/issues/12330\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mDEPRECATION: Loading egg at /Users/saullogiovanip/miniconda3/lib/python3.12/site-packages/tudaesasII-2024.3-py3.12.egg is deprecated. pip 24.3 will enforce this behaviour change. A possible replacement is to use pip for package installation.. Discussion can be found at https://github.com/pypa/pip/issues/12330\u001b[0m\u001b[33m\n",
+      "\u001b[33mDEPRECATION: Loading egg at /Users/saullogiovanip/miniconda3/lib/python3.13/site-packages/panels-0.5.0-py3.13-macosx-11.1-arm64.egg is deprecated. pip 25.1 will enforce this behaviour change. A possible replacement is to use pip for package installation. Discussion can be found at https://github.com/pypa/pip/issues/12330\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mDEPRECATION: Loading egg at /Users/saullogiovanip/miniconda3/lib/python3.13/site-packages/tuduam-2026.3-py3.13.egg is deprecated. pip 25.1 will enforce this behaviour change. A possible replacement is to use pip for package installation. Discussion can be found at https://github.com/pypa/pip/issues/12330\u001b[0m\u001b[33m\n",
       "\u001b[0m"
      ]
     }
@@ -248,7 +242,7 @@
     "assert len(stack_ref) == 48\n",
     "num_variables = len(stack_ref) // 4 # NOTE independent angles for a symmetric and balanced laminate\n",
     "\n",
-    "# NOTE make sure that you understand this\n",
+    "# NOTE: make sure that you understand this\n",
     "num_variables = 2*num_variables # NOTE twice as many variables needed for the ghost layer approach\n",
     "\n",
     "# material properties\n",
@@ -387,7 +381,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lambda_cs_ref 13517.970921520578\n",
+      "lambda_cs_ref 13517.97092152058\n",
       "lambda_cb_ref_analytical 14167.523183899806\n"
      ]
     },
@@ -395,18 +389,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x7/jww7lc053bv10s9m981_324dmy7lhy/T/ipykernel_57190/2488278243.py:25: RuntimeWarning: divide by zero encountered in divide\n",
+      "/var/folders/x7/jww7lc053bv10s9m981_324dmy7lhy/T/ipykernel_64693/2488278243.py:25: RuntimeWarning: divide by zero encountered in divide\n",
       "  gamma_12_allowable/abs(gamma_i_12) - 1\n"
      ]
     }
    ],
    "source": [
+    "lambda_cb_ref_analytical = calc_buckling_analytical(prop_ref)\n",
+    "print('lambda_cb_ref_analytical', lambda_cb_ref_analytical)\n",
+    "\n",
     "lambda_cs_ref = calc_failure_load_Haftka(prop_ref)\n",
     "print('lambda_cs_ref', lambda_cs_ref)\n",
-    "assert np.isclose(lambda_cs_ref, 13518.66, rtol=1e-3)\n",
-    "\n",
-    "lambda_cb_ref_analytical = calc_buckling_analytical(prop_ref)\n",
-    "print('lambda_cb_ref_analytical', lambda_cb_ref_analytical)\n"
+    "assert np.isclose(lambda_cs_ref, 13518.66, rtol=1e-3)"
    ]
   },
   {
@@ -420,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "id": "executive-serial",
    "metadata": {},
    "outputs": [],
@@ -441,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "id": "f9e10d51-cf97-4ae1-9781-aee8fccc4424",
    "metadata": {},
    "outputs": [],
@@ -484,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "id": "subject-intensity",
    "metadata": {
     "scrolled": true
@@ -519,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "id": "casual-knitting",
    "metadata": {},
    "outputs": [
@@ -590,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "id": "favorite-family",
    "metadata": {},
    "outputs": [],
@@ -637,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "id": "dominican-bridge",
    "metadata": {},
    "outputs": [],
@@ -645,8 +639,8 @@
     "method = algorithm = GA(\n",
     "    pop_size=20,\n",
     "    sampling=IntegerRandomSampling(),\n",
-    "    crossover=SBX(prob=1.0, eta=3.0, vtype=float, repair=RoundingRepair()),\n",
-    "    mutation=PM(prob=1.0, eta=3.0, vtype=float, repair=RoundingRepair()),\n",
+    "    crossover=SBX(prob=0.9, eta=3.0, vtype=float, repair=RoundingRepair()),\n",
+    "    mutation=PM(prob=0.05, eta=3.0, vtype=float, repair=RoundingRepair()),\n",
     "    eliminate_duplicates=True)"
    ]
   },
@@ -660,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 14,
    "id": "clear-anniversary",
    "metadata": {
     "scrolled": true
@@ -670,7 +664,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x7/jww7lc053bv10s9m981_324dmy7lhy/T/ipykernel_57190/2488278243.py:25: RuntimeWarning: divide by zero encountered in divide\n",
+      "/var/folders/x7/jww7lc053bv10s9m981_324dmy7lhy/T/ipykernel_64693/2488278243.py:25: RuntimeWarning: divide by zero encountered in divide\n",
       "  gamma_12_allowable/abs(gamma_i_12) - 1\n"
      ]
     },
@@ -678,7 +672,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best solution found: [1 1 2 2 0 0 2 1 0 0 0 0 1 1 1 0 1 1 1 1 1 1 1 1]\n",
+      "Best solution found: [1 1 2 1 0 0 2 1 1 0 1 0 1 1 1 1 1 1 1 1 1 1 0 1]\n",
       "Function value: [0.00036052]\n",
       "Constraint violation: [0.]\n"
      ]
@@ -707,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 16,
    "id": "opponent-campaign",
    "metadata": {},
    "outputs": [
@@ -717,18 +711,20 @@
      "text": [
       "num of layers 44\n",
       "volume 0.0003605154080000002\n",
-      "ms_buckling_opt 0.023418794562162004\n",
-      "ms_failure_opt 0.4356104684218065\n",
-      "optimal layup [ 45 -45  45 -45  90  90   0   0   0   0  90  90  45 -45   0   0   0   0\n",
-      "   0   0   0   0   0   0   0   0   0   0   0   0 -45  45  90  90   0   0\n",
-      "   0   0  90  90 -45  45 -45  45]\n"
+      "ms_buckling_opt 0.09626423904232095\n",
+      "ms_failure_opt 0.13083357938326134\n",
+      "optimal layup [ 45 -45  45 -45  90  90  45 -45   0   0   0   0  90  90  45 -45  45 -45\n",
+      "   0   0   0   0   0   0   0   0 -45  45 -45  45  90  90   0   0   0   0\n",
+      " -45  45  90  90 -45  45 -45  45]\n",
+      "lambda_cb_opt_analytical 10962.64239042321\n",
+      "lambda_cs_opt 11308.335793832613\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x7/jww7lc053bv10s9m981_324dmy7lhy/T/ipykernel_57190/2488278243.py:25: RuntimeWarning: divide by zero encountered in divide\n",
+      "/var/folders/x7/jww7lc053bv10s9m981_324dmy7lhy/T/ipykernel_64693/2488278243.py:25: RuntimeWarning: divide by zero encountered in divide\n",
       "  gamma_12_allowable/abs(gamma_i_12) - 1\n"
      ]
     }
@@ -742,7 +738,13 @@
     "print('volume', volume(res.X))\n",
     "print('ms_buckling_opt', ms_buckling_opt)\n",
     "print('ms_failure_opt', ms_failure_opt)\n",
-    "print('optimal layup', stack_opt)"
+    "print('optimal layup', stack_opt)\n",
+    "\n",
+    "lambda_cb_opt_analytical = calc_buckling_analytical(prop_opt)\n",
+    "print('lambda_cb_opt_analytical', lambda_cb_opt_analytical)\n",
+    "\n",
+    "lambda_cs_opt = calc_failure_load_Haftka(prop_opt)\n",
+    "print('lambda_cs_opt', lambda_cs_opt)"
    ]
   },
   {
@@ -770,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
