MAINT: fixed numpy import

--- a/doc/source/opt-lightweight-smeared-finite-diff-Le-Riche.ipynb
+++ b/doc/source/opt-lightweight-smeared-finite-diff-Le-Riche.ipynb
@@ -196,6 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "# Table 03, first row\n",
     "a_value = 20. # [in]\n",
     "b_value = 5. # [in]\n",
@@ -344,7 +345,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import scipy.optimize as opt\n",
     "\n",
     "def calc_failure_load_Haftka(prop):\n",
@@ -411,7 +411,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x7/jww7lc053bv10s9m981_324dmy7lhy/T/ipykernel_11902/1029688048.py:25: RuntimeWarning: divide by zero encountered in divide\n",
+      "/var/folders/x7/jww7lc053bv10s9m981_324dmy7lhy/T/ipykernel_16236/3154083915.py:24: RuntimeWarning: divide by zero encountered in divide\n",
       "  gamma_12_allowable/abs(gamma_i_12) - 1\n"
      ]
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "casual-knitting",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "dominican-bridge",
    "metadata": {},
    "outputs": [
@@ -555,21 +555,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting SLSQP Optimization with Scipy...\n",
-      "Optimization terminated successfully    (Exit mode 0)\n",
-      "            Current function value: 0.0002602045301996549\n",
-      "            Iterations: 5\n",
-      "            Function evaluations: 21\n",
-      "            Gradient evaluations: 5\n",
-      "Best solution found: [0.00143803 0.00246815 0.000127  ]\n"
+      "Starting SLSQP Optimization with Scipy...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x7/jww7lc053bv10s9m981_324dmy7lhy/T/ipykernel_11902/1029688048.py:25: RuntimeWarning: divide by zero encountered in divide\n",
+      "/var/folders/x7/jww7lc053bv10s9m981_324dmy7lhy/T/ipykernel_16236/3154083915.py:24: RuntimeWarning: divide by zero encountered in divide\n",
       "  gamma_12_allowable/abs(gamma_i_12) - 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully    (Exit mode 0)\n",
+      "            Current function value: 0.0002602045301996549\n",
+      "            Iterations: 5\n",
+      "            Function evaluations: 21\n",
+      "            Gradient evaluations: 5\n",
+      "Best solution found: [0.00143803 0.00246815 0.000127  ]\n"
      ]
     }
    ],
@@ -613,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "opponent-campaign",
    "metadata": {},
    "outputs": [
@@ -632,7 +638,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x7/jww7lc053bv10s9m981_324dmy7lhy/T/ipykernel_11902/1029688048.py:25: RuntimeWarning: divide by zero encountered in divide\n",
+      "/var/folders/x7/jww7lc053bv10s9m981_324dmy7lhy/T/ipykernel_16236/3154083915.py:24: RuntimeWarning: divide by zero encountered in divide\n",
       "  gamma_12_allowable/abs(gamma_i_12) - 1\n"
      ]
     }
