--- a/doc/source/opt-lightweight-smeared-gradient-Le-Riche.ipynb
+++ b/doc/source/opt-lightweight-smeared-gradient-Le-Riche.ipynb
@@ -196,6 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "# Table 03, first row\n",
     "a_value = 20. # [in]\n",
     "b_value = 5. # [in]\n",
@@ -548,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "dominican-bridge",
    "metadata": {},
    "outputs": [
